Practica04/src/sintactico/y.output
   0  $accept : programa $end

   1  programa : metodos VOID MAIN '(' ')' '{' sentencias '}'

   2  metodos : metodos metodo
   3          |

   4  metodo : tipoSimple ID '(' parametros ')' '{' cuerpoMetodo '}'
   5         | VOID ID '(' parametros ')' '{' cuerpoMetodo '}'
   6         | declaracionVariable ';'

   7  llamadaFuncion : ID '(' expresiones ')'
   8                 | ID '(' argumentos ')'

   9  tipoParametro : ID
  10                | CTE_ENTERA
  11                | CTE_REAL

  12  parametros : parametros ',' tipoSimple ID
  13             | tipoSimple ID
  14             |

  15  cuerpoMetodo : sentencias
  16               |

  17  sentencias : sentencias sentencia
  18             | sentencia

  19  sentencia : llamadaVariable
  20            | declaracionVariable ';'
  21            | llamadaVariable '=' expresion ';'
  22            | declaracionVariable '=' expresion ';'
  23            | ID '.' ID '=' expresion ';'
  24            | WHILE '(' expresion ')' '{' sentencias '}'
  25            | IF '(' expresion ')' cuerpoCondicional
  26            | IF '(' expresion ')' cuerpoCondicional ELSE cuerpoCondicional
  27            | WRITE expresiones ';'
  28            | READ expresiones ';'
  29            | llamadaFuncion ';'
  30            | RETURN expresion ';'

  31  cuerpoCondicional : '{' sentencias '}'
  32                    | sentencia

  33  argumentos : argumentos ',' tipoParametro
  34             |

  35  llamadaVariable : ID llamadaArray
  36                  | ID

  37  declaracionVariable : tipoSimple identificador
  38                      | tipoSimple indices identificador
  39                      | STRUCT '{' campos '}' ID

  40  campos : campos declaracionVariable ';'
  41         | declaracionVariable ';'

  42  expresiones : expresiones ',' expresion
  43              | expresion

  44  expresion : llamadaVariable
  45            | CTE_ENTERA
  46            | CTE_REAL
  47            | CTE_CARACTER
  48            | expresion '+' expresion
  49            | expresion '*' expresion
  50            | expresion '/' expresion
  51            | expresion '-' expresion
  52            | expresion '%' expresion
  53            | expresion '>' expresion
  54            | expresion '<' expresion
  55            | expresion MAYORIGUALQUE expresion
  56            | expresion MENORIGUALQUE expresion
  57            | expresion DISTINTO expresion
  58            | expresion IGUALDAD expresion
  59            | expresion Y expresion
  60            | expresion O expresion
  61            | expresion '.' expresion
  62            | '-' expresion
  63            | '!' expresion
  64            | '(' expresion ')'
  65            | '(' tipoSimple ')' expresion
  66            | llamadaFuncion

  67  llamadaArray : llamadaArray '[' expresiones ']'
  68               | '[' expresiones ']'

  69  indices : indices '[' CTE_ENTERA ']'
  70          | '[' CTE_ENTERA ']'

  71  identificador : identificador ',' ID
  72                | ID

  73  tipoSimple : INT
  74             | DOUBLE
  75             | CHAR

state 0
	$accept : . programa $end  (0)
	metodos : .  (3)

	.  reduce 3

	programa  goto 1
	metodos  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : metodos . VOID MAIN '(' ')' '{' sentencias '}'  (1)
	metodos : metodos . metodo  (2)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	VOID  shift 7
	.  error

	metodo  goto 8
	tipoSimple  goto 9
	declaracionVariable  goto 10


state 3
	tipoSimple : INT .  (73)

	.  reduce 73


state 4
	tipoSimple : DOUBLE .  (74)

	.  reduce 74


state 5
	tipoSimple : CHAR .  (75)

	.  reduce 75


state 6
	declaracionVariable : STRUCT . '{' campos '}' ID  (39)

	'{'  shift 11
	.  error


state 7
	programa : metodos VOID . MAIN '(' ')' '{' sentencias '}'  (1)
	metodo : VOID . ID '(' parametros ')' '{' cuerpoMetodo '}'  (5)

	MAIN  shift 12
	ID  shift 13
	.  error


state 8
	metodos : metodos metodo .  (2)

	.  reduce 2


state 9
	metodo : tipoSimple . ID '(' parametros ')' '{' cuerpoMetodo '}'  (4)
	declaracionVariable : tipoSimple . identificador  (37)
	declaracionVariable : tipoSimple . indices identificador  (38)

	ID  shift 14
	'['  shift 15
	.  error

	identificador  goto 16
	indices  goto 17


state 10
	metodo : declaracionVariable . ';'  (6)

	';'  shift 18
	.  error


state 11
	declaracionVariable : STRUCT '{' . campos '}' ID  (39)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	.  error

	tipoSimple  goto 19
	declaracionVariable  goto 20
	campos  goto 21


state 12
	programa : metodos VOID MAIN . '(' ')' '{' sentencias '}'  (1)

	'('  shift 22
	.  error


state 13
	metodo : VOID ID . '(' parametros ')' '{' cuerpoMetodo '}'  (5)

	'('  shift 23
	.  error


state 14
	metodo : tipoSimple ID . '(' parametros ')' '{' cuerpoMetodo '}'  (4)
	identificador : ID .  (72)

	'('  shift 24
	';'  reduce 72
	','  reduce 72


state 15
	indices : '[' . CTE_ENTERA ']'  (70)

	CTE_ENTERA  shift 25
	.  error


state 16
	declaracionVariable : tipoSimple identificador .  (37)
	identificador : identificador . ',' ID  (71)

	','  shift 26
	'='  reduce 37
	';'  reduce 37


state 17
	declaracionVariable : tipoSimple indices . identificador  (38)
	indices : indices . '[' CTE_ENTERA ']'  (69)

	ID  shift 27
	'['  shift 28
	.  error

	identificador  goto 29


state 18
	metodo : declaracionVariable ';' .  (6)

	.  reduce 6


state 19
	declaracionVariable : tipoSimple . identificador  (37)
	declaracionVariable : tipoSimple . indices identificador  (38)

	ID  shift 27
	'['  shift 15
	.  error

	identificador  goto 16
	indices  goto 17


state 20
	campos : declaracionVariable . ';'  (41)

	';'  shift 30
	.  error


state 21
	declaracionVariable : STRUCT '{' campos . '}' ID  (39)
	campos : campos . declaracionVariable ';'  (40)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	'}'  shift 31
	.  error

	tipoSimple  goto 19
	declaracionVariable  goto 32


state 22
	programa : metodos VOID MAIN '(' . ')' '{' sentencias '}'  (1)

	')'  shift 33
	.  error


state 23
	metodo : VOID ID '(' . parametros ')' '{' cuerpoMetodo '}'  (5)
	parametros : .  (14)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	')'  reduce 14
	','  reduce 14

	tipoSimple  goto 34
	parametros  goto 35


state 24
	metodo : tipoSimple ID '(' . parametros ')' '{' cuerpoMetodo '}'  (4)
	parametros : .  (14)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	')'  reduce 14
	','  reduce 14

	tipoSimple  goto 34
	parametros  goto 36


state 25
	indices : '[' CTE_ENTERA . ']'  (70)

	']'  shift 37
	.  error


state 26
	identificador : identificador ',' . ID  (71)

	ID  shift 38
	.  error


state 27
	identificador : ID .  (72)

	.  reduce 72


state 28
	indices : indices '[' . CTE_ENTERA ']'  (69)

	CTE_ENTERA  shift 39
	.  error


state 29
	declaracionVariable : tipoSimple indices identificador .  (38)
	identificador : identificador . ',' ID  (71)

	','  shift 26
	'='  reduce 38
	';'  reduce 38


state 30
	campos : declaracionVariable ';' .  (41)

	.  reduce 41


state 31
	declaracionVariable : STRUCT '{' campos '}' . ID  (39)

	ID  shift 40
	.  error


state 32
	campos : campos declaracionVariable . ';'  (40)

	';'  shift 41
	.  error


state 33
	programa : metodos VOID MAIN '(' ')' . '{' sentencias '}'  (1)

	'{'  shift 42
	.  error


state 34
	parametros : tipoSimple . ID  (13)

	ID  shift 43
	.  error


state 35
	metodo : VOID ID '(' parametros . ')' '{' cuerpoMetodo '}'  (5)
	parametros : parametros . ',' tipoSimple ID  (12)

	')'  shift 44
	','  shift 45
	.  error


state 36
	metodo : tipoSimple ID '(' parametros . ')' '{' cuerpoMetodo '}'  (4)
	parametros : parametros . ',' tipoSimple ID  (12)

	')'  shift 46
	','  shift 45
	.  error


state 37
	indices : '[' CTE_ENTERA ']' .  (70)

	.  reduce 70


state 38
	identificador : identificador ',' ID .  (71)

	.  reduce 71


state 39
	indices : indices '[' CTE_ENTERA . ']'  (69)

	']'  shift 47
	.  error


state 40
	declaracionVariable : STRUCT '{' campos '}' ID .  (39)

	.  reduce 39


state 41
	campos : campos declaracionVariable ';' .  (40)

	.  reduce 40


state 42
	programa : metodos VOID MAIN '(' ')' '{' . sentencias '}'  (1)

	READ  shift 48
	WRITE  shift 49
	WHILE  shift 50
	IF  shift 51
	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	RETURN  shift 52
	ID  shift 53
	.  error

	sentencias  goto 54
	tipoSimple  goto 19
	declaracionVariable  goto 55
	llamadaFuncion  goto 56
	sentencia  goto 57
	llamadaVariable  goto 58


state 43
	parametros : tipoSimple ID .  (13)

	.  reduce 13


state 44
	metodo : VOID ID '(' parametros ')' . '{' cuerpoMetodo '}'  (5)

	'{'  shift 59
	.  error


state 45
	parametros : parametros ',' . tipoSimple ID  (12)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	.  error

	tipoSimple  goto 60


state 46
	metodo : tipoSimple ID '(' parametros ')' . '{' cuerpoMetodo '}'  (4)

	'{'  shift 61
	.  error


state 47
	indices : indices '[' CTE_ENTERA ']' .  (69)

	.  reduce 69


state 48
	sentencia : READ . expresiones ';'  (28)

	CTE_ENTERA  shift 62
	CTE_REAL  shift 63
	CTE_CARACTER  shift 64
	ID  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	llamadaFuncion  goto 69
	expresiones  goto 70
	llamadaVariable  goto 71
	expresion  goto 72


state 49
	sentencia : WRITE . expresiones ';'  (27)

	CTE_ENTERA  shift 62
	CTE_REAL  shift 63
	CTE_CARACTER  shift 64
	ID  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	llamadaFuncion  goto 69
	expresiones  goto 73
	llamadaVariable  goto 71
	expresion  goto 72


state 50
	sentencia : WHILE . '(' expresion ')' '{' sentencias '}'  (24)

	'('  shift 74
	.  error


state 51
	sentencia : IF . '(' expresion ')' cuerpoCondicional  (25)
	sentencia : IF . '(' expresion ')' cuerpoCondicional ELSE cuerpoCondicional  (26)

	'('  shift 75
	.  error


state 52
	sentencia : RETURN . expresion ';'  (30)

	CTE_ENTERA  shift 62
	CTE_REAL  shift 63
	CTE_CARACTER  shift 64
	ID  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	llamadaFuncion  goto 69
	llamadaVariable  goto 71
	expresion  goto 76


state 53
	llamadaFuncion : ID . '(' expresiones ')'  (7)
	llamadaFuncion : ID . '(' argumentos ')'  (8)
	sentencia : ID . '.' ID '=' expresion ';'  (23)
	llamadaVariable : ID . llamadaArray  (35)
	llamadaVariable : ID .  (36)

	'['  shift 77
	'.'  shift 78
	'('  shift 79
	READ  reduce 36
	WRITE  reduce 36
	WHILE  reduce 36
	IF  reduce 36
	ELSE  reduce 36
	INT  reduce 36
	DOUBLE  reduce 36
	CHAR  reduce 36
	STRUCT  reduce 36
	RETURN  reduce 36
	ID  reduce 36
	'='  reduce 36
	'}'  reduce 36

	llamadaArray  goto 80


state 54
	programa : metodos VOID MAIN '(' ')' '{' sentencias . '}'  (1)
	sentencias : sentencias . sentencia  (17)

	READ  shift 48
	WRITE  shift 49
	WHILE  shift 50
	IF  shift 51
	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	RETURN  shift 52
	ID  shift 53
	'}'  shift 81
	.  error

	tipoSimple  goto 19
	declaracionVariable  goto 55
	llamadaFuncion  goto 56
	sentencia  goto 82
	llamadaVariable  goto 58


state 55
	sentencia : declaracionVariable . ';'  (20)
	sentencia : declaracionVariable . '=' expresion ';'  (22)

	'='  shift 83
	';'  shift 84
	.  error


state 56
	sentencia : llamadaFuncion . ';'  (29)

	';'  shift 85
	.  error


state 57
	sentencias : sentencia .  (18)

	.  reduce 18


state 58
	sentencia : llamadaVariable .  (19)
	sentencia : llamadaVariable . '=' expresion ';'  (21)

	'='  shift 86
	READ  reduce 19
	WRITE  reduce 19
	WHILE  reduce 19
	IF  reduce 19
	ELSE  reduce 19
	INT  reduce 19
	DOUBLE  reduce 19
	CHAR  reduce 19
	STRUCT  reduce 19
	RETURN  reduce 19
	ID  reduce 19
	'}'  reduce 19


state 59
	metodo : VOID ID '(' parametros ')' '{' . cuerpoMetodo '}'  (5)
	cuerpoMetodo : .  (16)

	READ  shift 48
	WRITE  shift 49
	WHILE  shift 50
	IF  shift 51
	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	RETURN  shift 52
	ID  shift 53
	'}'  reduce 16

	sentencias  goto 87
	tipoSimple  goto 19
	cuerpoMetodo  goto 88
	declaracionVariable  goto 55
	llamadaFuncion  goto 56
	sentencia  goto 57
	llamadaVariable  goto 58


state 60
	parametros : parametros ',' tipoSimple . ID  (12)

	ID  shift 89
	.  error


state 61
	metodo : tipoSimple ID '(' parametros ')' '{' . cuerpoMetodo '}'  (4)
	cuerpoMetodo : .  (16)

	READ  shift 48
	WRITE  shift 49
	WHILE  shift 50
	IF  shift 51
	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	RETURN  shift 52
	ID  shift 53
	'}'  reduce 16

	sentencias  goto 87
	tipoSimple  goto 19
	cuerpoMetodo  goto 90
	declaracionVariable  goto 55
	llamadaFuncion  goto 56
	sentencia  goto 57
	llamadaVariable  goto 58


state 62
	expresion : CTE_ENTERA .  (45)

	.  reduce 45


state 63
	expresion : CTE_REAL .  (46)

	.  reduce 46


state 64
	expresion : CTE_CARACTER .  (47)

	.  reduce 47


state 65
	llamadaFuncion : ID . '(' expresiones ')'  (7)
	llamadaFuncion : ID . '(' argumentos ')'  (8)
	llamadaVariable : ID . llamadaArray  (35)
	llamadaVariable : ID .  (36)

	'['  shift 77
	'('  shift 79
	Y  reduce 36
	O  reduce 36
	MAYORIGUALQUE  reduce 36
	MENORIGUALQUE  reduce 36
	DISTINTO  reduce 36
	IGUALDAD  reduce 36
	'>'  reduce 36
	'<'  reduce 36
	'+'  reduce 36
	'-'  reduce 36
	'*'  reduce 36
	'/'  reduce 36
	'%'  reduce 36
	']'  reduce 36
	'.'  reduce 36
	')'  reduce 36
	';'  reduce 36
	','  reduce 36

	llamadaArray  goto 80


state 66
	expresion : '!' . expresion  (63)

	CTE_ENTERA  shift 62
	CTE_REAL  shift 63
	CTE_CARACTER  shift 64
	ID  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	llamadaFuncion  goto 69
	llamadaVariable  goto 71
	expresion  goto 91


state 67
	expresion : '-' . expresion  (62)

	CTE_ENTERA  shift 62
	CTE_REAL  shift 63
	CTE_CARACTER  shift 64
	ID  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	llamadaFuncion  goto 69
	llamadaVariable  goto 71
	expresion  goto 92


state 68
	expresion : '(' . expresion ')'  (64)
	expresion : '(' . tipoSimple ')' expresion  (65)

	CTE_ENTERA  shift 62
	CTE_REAL  shift 63
	CTE_CARACTER  shift 64
	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	ID  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	tipoSimple  goto 93
	llamadaFuncion  goto 69
	llamadaVariable  goto 71
	expresion  goto 94


state 69
	expresion : llamadaFuncion .  (66)

	.  reduce 66


state 70
	sentencia : READ expresiones . ';'  (28)
	expresiones : expresiones . ',' expresion  (42)

	';'  shift 95
	','  shift 96
	.  error


state 71
	expresion : llamadaVariable .  (44)

	.  reduce 44


state 72
	expresiones : expresion .  (43)
	expresion : expresion . '+' expresion  (48)
	expresion : expresion . '*' expresion  (49)
	expresion : expresion . '/' expresion  (50)
	expresion : expresion . '-' expresion  (51)
	expresion : expresion . '%' expresion  (52)
	expresion : expresion . '>' expresion  (53)
	expresion : expresion . '<' expresion  (54)
	expresion : expresion . MAYORIGUALQUE expresion  (55)
	expresion : expresion . MENORIGUALQUE expresion  (56)
	expresion : expresion . DISTINTO expresion  (57)
	expresion : expresion . IGUALDAD expresion  (58)
	expresion : expresion . Y expresion  (59)
	expresion : expresion . O expresion  (60)
	expresion : expresion . '.' expresion  (61)

	Y  shift 97
	O  shift 98
	MAYORIGUALQUE  shift 99
	MENORIGUALQUE  shift 100
	DISTINTO  shift 101
	IGUALDAD  shift 102
	'>'  shift 103
	'<'  shift 104
	'+'  shift 105
	'-'  shift 106
	'*'  shift 107
	'/'  shift 108
	'%'  shift 109
	'.'  shift 110
	']'  reduce 43
	')'  reduce 43
	';'  reduce 43
	','  reduce 43


state 73
	sentencia : WRITE expresiones . ';'  (27)
	expresiones : expresiones . ',' expresion  (42)

	';'  shift 111
	','  shift 96
	.  error


state 74
	sentencia : WHILE '(' . expresion ')' '{' sentencias '}'  (24)

	CTE_ENTERA  shift 62
	CTE_REAL  shift 63
	CTE_CARACTER  shift 64
	ID  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	llamadaFuncion  goto 69
	llamadaVariable  goto 71
	expresion  goto 112


state 75
	sentencia : IF '(' . expresion ')' cuerpoCondicional  (25)
	sentencia : IF '(' . expresion ')' cuerpoCondicional ELSE cuerpoCondicional  (26)

	CTE_ENTERA  shift 62
	CTE_REAL  shift 63
	CTE_CARACTER  shift 64
	ID  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	llamadaFuncion  goto 69
	llamadaVariable  goto 71
	expresion  goto 113


state 76
	sentencia : RETURN expresion . ';'  (30)
	expresion : expresion . '+' expresion  (48)
	expresion : expresion . '*' expresion  (49)
	expresion : expresion . '/' expresion  (50)
	expresion : expresion . '-' expresion  (51)
	expresion : expresion . '%' expresion  (52)
	expresion : expresion . '>' expresion  (53)
	expresion : expresion . '<' expresion  (54)
	expresion : expresion . MAYORIGUALQUE expresion  (55)
	expresion : expresion . MENORIGUALQUE expresion  (56)
	expresion : expresion . DISTINTO expresion  (57)
	expresion : expresion . IGUALDAD expresion  (58)
	expresion : expresion . Y expresion  (59)
	expresion : expresion . O expresion  (60)
	expresion : expresion . '.' expresion  (61)

	Y  shift 97
	O  shift 98
	MAYORIGUALQUE  shift 99
	MENORIGUALQUE  shift 100
	DISTINTO  shift 101
	IGUALDAD  shift 102
	'>'  shift 103
	'<'  shift 104
	'+'  shift 105
	'-'  shift 106
	'*'  shift 107
	'/'  shift 108
	'%'  shift 109
	'.'  shift 110
	';'  shift 114
	.  error


state 77
	llamadaArray : '[' . expresiones ']'  (68)

	CTE_ENTERA  shift 62
	CTE_REAL  shift 63
	CTE_CARACTER  shift 64
	ID  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	llamadaFuncion  goto 69
	expresiones  goto 115
	llamadaVariable  goto 71
	expresion  goto 72


state 78
	sentencia : ID '.' . ID '=' expresion ';'  (23)

	ID  shift 116
	.  error


state 79
	llamadaFuncion : ID '(' . expresiones ')'  (7)
	llamadaFuncion : ID '(' . argumentos ')'  (8)
	argumentos : .  (34)

	CTE_ENTERA  shift 62
	CTE_REAL  shift 63
	CTE_CARACTER  shift 64
	ID  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	')'  reduce 34
	','  reduce 34

	llamadaFuncion  goto 69
	expresiones  goto 117
	argumentos  goto 118
	llamadaVariable  goto 71
	expresion  goto 72


state 80
	llamadaVariable : ID llamadaArray .  (35)
	llamadaArray : llamadaArray . '[' expresiones ']'  (67)

	'['  shift 119
	READ  reduce 35
	WRITE  reduce 35
	WHILE  reduce 35
	IF  reduce 35
	ELSE  reduce 35
	INT  reduce 35
	DOUBLE  reduce 35
	CHAR  reduce 35
	STRUCT  reduce 35
	RETURN  reduce 35
	ID  reduce 35
	Y  reduce 35
	O  reduce 35
	MAYORIGUALQUE  reduce 35
	MENORIGUALQUE  reduce 35
	DISTINTO  reduce 35
	IGUALDAD  reduce 35
	'='  reduce 35
	'>'  reduce 35
	'<'  reduce 35
	'+'  reduce 35
	'-'  reduce 35
	'*'  reduce 35
	'/'  reduce 35
	'%'  reduce 35
	']'  reduce 35
	'.'  reduce 35
	')'  reduce 35
	'}'  reduce 35
	';'  reduce 35
	','  reduce 35


state 81
	programa : metodos VOID MAIN '(' ')' '{' sentencias '}' .  (1)

	.  reduce 1


state 82
	sentencias : sentencias sentencia .  (17)

	.  reduce 17


state 83
	sentencia : declaracionVariable '=' . expresion ';'  (22)

	CTE_ENTERA  shift 62
	CTE_REAL  shift 63
	CTE_CARACTER  shift 64
	ID  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	llamadaFuncion  goto 69
	llamadaVariable  goto 71
	expresion  goto 120


state 84
	sentencia : declaracionVariable ';' .  (20)

	.  reduce 20


state 85
	sentencia : llamadaFuncion ';' .  (29)

	.  reduce 29


state 86
	sentencia : llamadaVariable '=' . expresion ';'  (21)

	CTE_ENTERA  shift 62
	CTE_REAL  shift 63
	CTE_CARACTER  shift 64
	ID  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	llamadaFuncion  goto 69
	llamadaVariable  goto 71
	expresion  goto 121


state 87
	cuerpoMetodo : sentencias .  (15)
	sentencias : sentencias . sentencia  (17)

	READ  shift 48
	WRITE  shift 49
	WHILE  shift 50
	IF  shift 51
	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	RETURN  shift 52
	ID  shift 53
	'}'  reduce 15

	tipoSimple  goto 19
	declaracionVariable  goto 55
	llamadaFuncion  goto 56
	sentencia  goto 82
	llamadaVariable  goto 58


state 88
	metodo : VOID ID '(' parametros ')' '{' cuerpoMetodo . '}'  (5)

	'}'  shift 122
	.  error


state 89
	parametros : parametros ',' tipoSimple ID .  (12)

	.  reduce 12


state 90
	metodo : tipoSimple ID '(' parametros ')' '{' cuerpoMetodo . '}'  (4)

	'}'  shift 123
	.  error


state 91
	expresion : expresion . '+' expresion  (48)
	expresion : expresion . '*' expresion  (49)
	expresion : expresion . '/' expresion  (50)
	expresion : expresion . '-' expresion  (51)
	expresion : expresion . '%' expresion  (52)
	expresion : expresion . '>' expresion  (53)
	expresion : expresion . '<' expresion  (54)
	expresion : expresion . MAYORIGUALQUE expresion  (55)
	expresion : expresion . MENORIGUALQUE expresion  (56)
	expresion : expresion . DISTINTO expresion  (57)
	expresion : expresion . IGUALDAD expresion  (58)
	expresion : expresion . Y expresion  (59)
	expresion : expresion . O expresion  (60)
	expresion : expresion . '.' expresion  (61)
	expresion : '!' expresion .  (63)

	'.'  shift 110
	Y  reduce 63
	O  reduce 63
	MAYORIGUALQUE  reduce 63
	MENORIGUALQUE  reduce 63
	DISTINTO  reduce 63
	IGUALDAD  reduce 63
	'>'  reduce 63
	'<'  reduce 63
	'+'  reduce 63
	'-'  reduce 63
	'*'  reduce 63
	'/'  reduce 63
	'%'  reduce 63
	']'  reduce 63
	')'  reduce 63
	';'  reduce 63
	','  reduce 63


state 92
	expresion : expresion . '+' expresion  (48)
	expresion : expresion . '*' expresion  (49)
	expresion : expresion . '/' expresion  (50)
	expresion : expresion . '-' expresion  (51)
	expresion : expresion . '%' expresion  (52)
	expresion : expresion . '>' expresion  (53)
	expresion : expresion . '<' expresion  (54)
	expresion : expresion . MAYORIGUALQUE expresion  (55)
	expresion : expresion . MENORIGUALQUE expresion  (56)
	expresion : expresion . DISTINTO expresion  (57)
	expresion : expresion . IGUALDAD expresion  (58)
	expresion : expresion . Y expresion  (59)
	expresion : expresion . O expresion  (60)
	expresion : expresion . '.' expresion  (61)
	expresion : '-' expresion .  (62)

	'.'  shift 110
	Y  reduce 62
	O  reduce 62
	MAYORIGUALQUE  reduce 62
	MENORIGUALQUE  reduce 62
	DISTINTO  reduce 62
	IGUALDAD  reduce 62
	'>'  reduce 62
	'<'  reduce 62
	'+'  reduce 62
	'-'  reduce 62
	'*'  reduce 62
	'/'  reduce 62
	'%'  reduce 62
	']'  reduce 62
	')'  reduce 62
	';'  reduce 62
	','  reduce 62


state 93
	expresion : '(' tipoSimple . ')' expresion  (65)

	')'  shift 124
	.  error


state 94
	expresion : expresion . '+' expresion  (48)
	expresion : expresion . '*' expresion  (49)
	expresion : expresion . '/' expresion  (50)
	expresion : expresion . '-' expresion  (51)
	expresion : expresion . '%' expresion  (52)
	expresion : expresion . '>' expresion  (53)
	expresion : expresion . '<' expresion  (54)
	expresion : expresion . MAYORIGUALQUE expresion  (55)
	expresion : expresion . MENORIGUALQUE expresion  (56)
	expresion : expresion . DISTINTO expresion  (57)
	expresion : expresion . IGUALDAD expresion  (58)
	expresion : expresion . Y expresion  (59)
	expresion : expresion . O expresion  (60)
	expresion : expresion . '.' expresion  (61)
	expresion : '(' expresion . ')'  (64)

	Y  shift 97
	O  shift 98
	MAYORIGUALQUE  shift 99
	MENORIGUALQUE  shift 100
	DISTINTO  shift 101
	IGUALDAD  shift 102
	'>'  shift 103
	'<'  shift 104
	'+'  shift 105
	'-'  shift 106
	'*'  shift 107
	'/'  shift 108
	'%'  shift 109
	'.'  shift 110
	')'  shift 125
	.  error


state 95
	sentencia : READ expresiones ';' .  (28)

	.  reduce 28


state 96
	expresiones : expresiones ',' . expresion  (42)

	CTE_ENTERA  shift 62
	CTE_REAL  shift 63
	CTE_CARACTER  shift 64
	ID  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	llamadaFuncion  goto 69
	llamadaVariable  goto 71
	expresion  goto 126


state 97
	expresion : expresion Y . expresion  (59)

	CTE_ENTERA  shift 62
	CTE_REAL  shift 63
	CTE_CARACTER  shift 64
	ID  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	llamadaFuncion  goto 69
	llamadaVariable  goto 71
	expresion  goto 127


state 98
	expresion : expresion O . expresion  (60)

	CTE_ENTERA  shift 62
	CTE_REAL  shift 63
	CTE_CARACTER  shift 64
	ID  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	llamadaFuncion  goto 69
	llamadaVariable  goto 71
	expresion  goto 128


state 99
	expresion : expresion MAYORIGUALQUE . expresion  (55)

	CTE_ENTERA  shift 62
	CTE_REAL  shift 63
	CTE_CARACTER  shift 64
	ID  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	llamadaFuncion  goto 69
	llamadaVariable  goto 71
	expresion  goto 129


state 100
	expresion : expresion MENORIGUALQUE . expresion  (56)

	CTE_ENTERA  shift 62
	CTE_REAL  shift 63
	CTE_CARACTER  shift 64
	ID  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	llamadaFuncion  goto 69
	llamadaVariable  goto 71
	expresion  goto 130


state 101
	expresion : expresion DISTINTO . expresion  (57)

	CTE_ENTERA  shift 62
	CTE_REAL  shift 63
	CTE_CARACTER  shift 64
	ID  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	llamadaFuncion  goto 69
	llamadaVariable  goto 71
	expresion  goto 131


state 102
	expresion : expresion IGUALDAD . expresion  (58)

	CTE_ENTERA  shift 62
	CTE_REAL  shift 63
	CTE_CARACTER  shift 64
	ID  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	llamadaFuncion  goto 69
	llamadaVariable  goto 71
	expresion  goto 132


state 103
	expresion : expresion '>' . expresion  (53)

	CTE_ENTERA  shift 62
	CTE_REAL  shift 63
	CTE_CARACTER  shift 64
	ID  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	llamadaFuncion  goto 69
	llamadaVariable  goto 71
	expresion  goto 133


state 104
	expresion : expresion '<' . expresion  (54)

	CTE_ENTERA  shift 62
	CTE_REAL  shift 63
	CTE_CARACTER  shift 64
	ID  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	llamadaFuncion  goto 69
	llamadaVariable  goto 71
	expresion  goto 134


state 105
	expresion : expresion '+' . expresion  (48)

	CTE_ENTERA  shift 62
	CTE_REAL  shift 63
	CTE_CARACTER  shift 64
	ID  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	llamadaFuncion  goto 69
	llamadaVariable  goto 71
	expresion  goto 135


state 106
	expresion : expresion '-' . expresion  (51)

	CTE_ENTERA  shift 62
	CTE_REAL  shift 63
	CTE_CARACTER  shift 64
	ID  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	llamadaFuncion  goto 69
	llamadaVariable  goto 71
	expresion  goto 136


state 107
	expresion : expresion '*' . expresion  (49)

	CTE_ENTERA  shift 62
	CTE_REAL  shift 63
	CTE_CARACTER  shift 64
	ID  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	llamadaFuncion  goto 69
	llamadaVariable  goto 71
	expresion  goto 137


state 108
	expresion : expresion '/' . expresion  (50)

	CTE_ENTERA  shift 62
	CTE_REAL  shift 63
	CTE_CARACTER  shift 64
	ID  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	llamadaFuncion  goto 69
	llamadaVariable  goto 71
	expresion  goto 138


state 109
	expresion : expresion '%' . expresion  (52)

	CTE_ENTERA  shift 62
	CTE_REAL  shift 63
	CTE_CARACTER  shift 64
	ID  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	llamadaFuncion  goto 69
	llamadaVariable  goto 71
	expresion  goto 139


state 110
	expresion : expresion '.' . expresion  (61)

	CTE_ENTERA  shift 62
	CTE_REAL  shift 63
	CTE_CARACTER  shift 64
	ID  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	llamadaFuncion  goto 69
	llamadaVariable  goto 71
	expresion  goto 140


state 111
	sentencia : WRITE expresiones ';' .  (27)

	.  reduce 27


state 112
